--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="/Users/songbongkeun/Desktop/sdk/extras/google/gcm/gcm-client/dist/gcm.jar"/>
-	<classpathentry kind="lib" path="/Users/songbongkeun/Desktop/sdk/extras/google/gcm/gcm-client/dist/gcm-src.jar"/>
+	<classpathentry kind="lib" path="library/gcm-src.jar"/>
+	<classpathentry kind="lib" path="library/gcm.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
